Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.6.0, Impala 2.7.0, Impala 2.8.0
Description
Query options automatically set by the Impala planner appear to not be reported in the runtime profile under the non-default query options.
Example query:
select * from functional.alltypes limit 1
The above query should trigger the single-node optimization and automatically set num_nodes=1, num_scanner_threads=1 and disable_codegen=true, but none of those changes are reported in the runtime profile under "Query Options (non default)".