be/src/service/client-request-state.cc
@@ -148,7 +148,7 @@ Status ClientRequestState::Exec(TExecRequest* exec_request) {
   profile_.AddChild(&server_profile_);
   summary_profile_.AddInfoString("Query Type", PrintTStmtType(stmt_type()));
   summary_profile_.AddInfoString("Query Options (non default)",
-      DebugQueryOptions(query_ctx_.client_request.query_options));
+      DebugQueryOptions(exec_request_.query_options));
 
   switch (exec_request->stmt_type) {
     case TStmtType::QUERY:
